fix text cut off in MR

--- a/app/assets/stylesheets/maintenance_requests.scss
+++ b/app/assets/stylesheets/maintenance_requests.scss
@@ -1,6 +1,17 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$color-white: #FFFFFF;
+$color-grey: #f4f8fb;
+$color-grey-1: #aab8c3;
+$color-grey-dark: #849aaa;
+$color-grey-dark-1: #cedae3;
+$color-green: #7dc691;
+$color-gray: #3e4b54;
+$color-gray-dark: #baccd8;
+$color-red: #e34f4f;
+$color-black: #000000;
+$color-blue-light: #7646FF;
 
 form#new_maintenance_request {
     width: 100%;
@@ -493,16 +504,20 @@ form#new_maintenance_request {
                 padding-left: 10px;
             }
             .btn-drop-mobile {
+                float: left;
+                height: 60px;
+                width: 180px;
+                color: $color-white;
                 background-color: #ff5a5f;
-                color: #fff;
-                height: 50px;
-                line-height: 50px;
-                display: inline-block;
-                border: none;
-                border-radius: 0;
-                font-weight: 600;
+                font-weight: 400;
+                font-size: 20px;
+                padding: 0;
+                border: #f58285;
+                border-style: solid;
+                border-width: 5px;
                 &.active {
-                    background-color: #8499aa;
+                    background-color: $color-grey-dark;
+                    border-color: $color-grey-dark;
                 }
                 &.trady-filter {
                     padding: 0 20px;
@@ -634,7 +649,7 @@ form#new_maintenance_request {
                 width: 435px;
             }
             .btn-drop-mobile {
-                padding: 0 40px;
+
             }
         }
     }
@@ -647,11 +662,21 @@ form#new_maintenance_request {
             }
         }
         .action-mobile .drop-mobile-list {
+            width: 100%;
             .content-mobile .dropcontent{
                 width: 335px;
             }
             .btn-drop-mobile {
+                &.trady-filter {
+                    width: 50%;
+                    margin-left: 25%;
+                }
                 padding: 0 15px;
+                width: 100%;
+                height: 82px;
+                color: $color-white;
+                font-weight: 600;
+                font-size: 16px;
             }
         }
     }
@@ -662,6 +687,7 @@ form#new_maintenance_request {
             }
             .btn-drop-mobile {
                 padding: 0 5px;
+                font-size: 14px;
             }
         }
     }
